--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   align-items: center;
   background-color: antiquewhite;
   position: relative;
+  align-items: center;
 }
 
 h3 {
@@ -20,7 +21,6 @@ body,
 .modal {
   display: flex;
   flex-direction: column;
-
 }
 
 .modal {
@@ -101,21 +101,21 @@ padding: ;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(3, 1fr);
- gap: 10px;
+  gap: 10px;
   width: 80vw;
   height: 80vh;
 }
 .gridItem {
-  height:28vh;
+  height: 28vh;
   border: 1px solid white;
 }
-.gridItem img{
-height: 80%;
-object-fit: cover;
+.gridItem img {
+  height: 80%;
+  object-fit: cover;
 
-width: 100%;
-border-radius: 5px;
-background-color: #797979;
+  width: 100%;
+  border-radius: 5px;
+  background-color: #797979;
 }
 .title {
   text-align: center;
@@ -126,6 +126,24 @@ background-color: #797979;
   line-height: 2.2em;
   background-color: lightsalmon;
 }
-.shadow{
+.shadow {
   box-shadow: 0px 0px 25px 5px #e67549;
+}
+@media only screen and (max-width: 650px) {
+  .gridContainer {
+    grid-template-columns: 1fr 1fr;
+  }
+  .title {
+    font-size: 2.5vw;
+    line-height: 30px;
+    height: 30px;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .gridContainer {
+    grid-template-columns: 1fr;
+  }
+  .title {
+    font-size: 4vw;
+  }
 }
