--- a/style.css
+++ b/style.css
@@ -132,6 +132,7 @@ padding: ;
 @media only screen and (max-width: 650px) {
   .gridContainer {
     grid-template-columns: 1fr 1fr;
+    height: auto;
   }
   .title {
     font-size: 2.5vw;
@@ -142,6 +143,7 @@ padding: ;
 @media only screen and (max-width: 400px) {
   .gridContainer {
     grid-template-columns: 1fr;
+    
   }
   .title {
     font-size: 4vw;
